Installed packages and moved filed to right project

--- a/Domain.Facades/Kalendarz2.Domain.Facades.csproj
+++ b/Domain.Facades/Kalendarz2.Domain.Facades.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Interfaces.Facades\Kalendarz2.Domain.Interfaces.Facades.csproj" />
+    <ProjectReference Include="..\Kalendarz2.Domain.Common\Kalendarz2.Domain.Common.csproj" />
+  </ItemGroup>
+
 </Project>
