--- a/Kalendarz2.Domain.Interfaces.Infrastucture/Kalendarz2.Domain.Interfaces.Infrastucture.csproj
+++ b/Kalendarz2.Domain.Interfaces.Infrastucture/Kalendarz2.Domain.Interfaces.Infrastucture.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Kalendarz2.Domain.Common\Kalendarz2.Domain.Common.csproj" />
+  </ItemGroup>
+
 </Project>
