Added sender email service

--- a/Domain.Facades/Kalendarz2.Domain.Facades.csproj
+++ b/Domain.Facades/Kalendarz2.Domain.Facades.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Interfaces.Facades\Kalendarz2.Domain.Interfaces.Facades.csproj" />
     <ProjectReference Include="..\Kalendarz2.Domain.Common\Kalendarz2.Domain.Common.csproj" />
+    <ProjectReference Include="..\Kalendarz2.Domain.Interfaces.Infrastucture\Kalendarz2.Domain.Interfaces.Infrastucture.csproj" />
   </ItemGroup>
 
 </Project>
