--- a/Kalendarz2.Backend/appsettings.json
+++ b/Kalendarz2.Backend/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "JSONWebTokensSettings": {
+    "Key": "81234CFB77034ECCDDD547F5FF4F2EFC",
+    "Issuer": "Calendar2.API",
+    "Audience": "Users",
+    "DurationInMinutes": 50
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,5 +14,5 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=CalendarDb;Trusted_Connection=True;"
-  },
+  }
 }
