--- a/kalendarz2.react/package.json
+++ b/kalendarz2.react/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.8.1",
     "@fullcalendar/daygrid": "^5.11.0",
     "@fullcalendar/interaction": "^5.11.0",
+    "@fullcalendar/list": "^5.11.0",
     "@fullcalendar/react": "^5.11.1",
     "@fullcalendar/timegrid": "^5.11.0",
     "@material-ui/pickers": "^3.3.10",
@@ -24,6 +25,7 @@
     "axios": "^0.26.1",
     "babel": "^6.23.0",
     "mdbreact": "^4.15.0",
+    "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
