--- a/kalendarz2.react/package.json
+++ b/kalendarz2.react/package.json
@@ -12,6 +12,7 @@
     "@fullcalendar/timegrid": "^5.11.0",
     "@material-ui/pickers": "^3.3.10",
     "@material/textfield": "^14.0.0",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.3",
