Add middleware for token, fix authorization, dependencyinjector. Token should work

--- a/Kalendarz2.Backend/Kalendarz2.Backend.csproj
+++ b/Kalendarz2.Backend/Kalendarz2.Backend.csproj
@@ -30,4 +30,10 @@
     <ProjectReference Include="..\Kalendarz2.Infrastructure.EntityFramework\Kalendarz2.Infrastructure.EntityFramework.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Program.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
 </Project>
