--- a/Kalendarz2.Backend/appsettings.json
+++ b/Kalendarz2.Backend/appsettings.json
@@ -14,5 +14,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=CalendarDb;Trusted_Connection=True;"
+  },
+  "Authentication": {
+    "JwtKey": "CALENDAR2_KEY_secretsecretmore128bitspleaseesaelppleaseesaelphealppleh",
+    "JwtExpireDays": 30,
+    "JwtIssuer": "http://calendar2.com"
   }
 }
